# promo-notify-cpp

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  Dockerfile  README.md  docker-compose.yml
app/: CMakeLists.txt  main.cpp
app/core/: config.h  database.h
app/models/: campaign.h
app/services/: campaign_service.h  sms_aero_client.h
config/: settings.example.env
scripts/: init_db.sql
